MOBACCTMGT-1035 - Fixed login form / image & logo alignment * Changed Android keyboard input mode to `adjustPan` rather than `adjustResize` for more unified experience across platforms * Programmatically set input form location * Removed alternative media queries in CSS * Updated (X) icon color & size

--- a/scss/pages/_login.scss
+++ b/scss/pages/_login.scss
@@ -25,53 +25,57 @@
   /**
    * Content
   **/
+  .scroll-content, #title-heading-bar, #login-content {
+    display: flex;
+    flex-direction: column;
+  }
+
   .scroll-content {
     padding-left:  16px;
     padding-right: 16px;
     background: $color-white url('../img/pages/login/background-street.jpg') no-repeat;
     background-size: 100%;
     font-family: 'open_sansregular';
-
-    @media (min-width: 321px) {
-      padding-left:  30px;
-      padding-right: 30px;
-    }
+    align-items: center;
 
     &.has-header, &.has-subheader {
       top: 0;
     }
 
-    .title-bar {
-      padding-top: 100px;
-      text-align: center;
+    #title-heading-bar {
+      justify-content: center;
+      height: 50%;
+      transition: height .2s ease-in-out;
 
       img {
         max-width: 80%;
+        align-self: center;
+        transition: margin .2s ease-in-out;
+        margin-top: -50px;
       }
+
+      &.open {
+        height: 25%;
+
+        img {
+          margin-top: 50px;
+        }
+      }
+    }
+
+    #login-content {
+      justify-content: flex-start;
+      height: 50%;
+      width: 100%;
+      max-width: 20rem;
+      transition: margin .2s ease-in-out;
     }
 
     form {
       position: relative;
       top: 0;
-      margin-top: 60px;
-      padding: 5px 16px;
+      padding: 8px 16px;
       background-color: #eee;
-
-      @media (min-height: 640px) {
-        margin-top: 130px;
-        padding: 16px;
-      }
-
-      -webkit-transition: top .2s ease-in-out;
-      transition:         top .2s ease-in-out;
-
-      .keyboard-open & {
-        top: -65px;
-
-        @media (min-height: 640px) {
-          top: -80px;
-        }
-      }
 
       &:after {
         position: absolute;
@@ -119,10 +123,6 @@
 
     .list, .login-controls {
       margin-bottom: 8px;
-
-      @media (min-height: 640px) {
-        margin-bottom: 12px;
-      }
     }
 
     .item-checkbox {
@@ -195,27 +195,19 @@
     }
 
     .item-input {
-      padding: 0;
+      padding: 4px 0;
       border-width: 0 0 1px;
       border-color: #b9b9b9;
-
-      @media (min-height: 640px) {
-        padding: 6px 0 5px;
-      }
 
       input {
         color: #333;
         font-family: 'open_sansbold';
         background-color: transparent;
+        padding: 0;
 
         &.xclear {
           padding-right: 2em;
           background: url("../img/x-circle.svg") center right no-repeat;
-        }
-
-        @media (min-height: 640px) {
-          padding-top:    2px;
-          padding-bottom: 3px;
         }
       }
 
